Fixed Quesiton Layout Bug

--- a/src/Components/Styles/Category.css
+++ b/src/Components/Styles/Category.css
@@ -27,6 +27,10 @@
 	box-shadow: 3px 3px 0 #171738;
 	width: 45%;
 	transition: background-color 0.3s ease-in-out;
+	display: flex;
+	box-sizing: border-box;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .category-link {
@@ -35,10 +39,6 @@
 	width: 100%;
 	height: 100%;
 	padding: 1rem;
-	display: flex;
-	box-sizing: border-box;
-	justify-content: space-between;
-	align-items: center;
 }
 
 .category-link:hover {
@@ -57,17 +57,21 @@
 	padding: 5px;
 }
 
-.category-link > .actions > button {
+.category-item > .actions {
+	display: flex;
+}
+
+.category-item > .actions > button {
 	background: transparent;
 	border: none;
 	font-size: 16px;
-	margin-left: 1rem;
+	/* margin-left: 1rem; */
 	cursor: pointer;
 	padding: 0.5rem;
 	border-radius: 5px;
 	transition: background-color 0.2s ease-in-out;
 }
 
-.category-link > .actions > button:hover {
+.category-item > .actions > button:hover {
 	background: #dff3e4;
 }
